syntax = "proto2";

package opentxs.proto;
option optimize_for = LITE_RUNTIME;

enum StorageHashType {
    STORAGEHASH_ERROR = 0;
    STORAGEHASH_PROTO = 1;
    STORAGEHASH_RAW = 2;
}
